# airgead_banking

./: .gitignore  CMakeLists.txt  README.md
include/: Account.h  Config.h  Utils.h
src/: Account.cpp  Main.cpp
